--- a/css/layout.css
+++ b/css/layout.css
@@ -1147,6 +1147,7 @@ input:-moz-placeholder {
     z-index: 9000;
     left: 50%;
     margin-left: -220px;
+    visibility: hidden;
     opacity: 0;
     -webkit-transition: all 300ms ease-out;
        -moz-transition: all 300ms ease-out;
@@ -1155,6 +1156,7 @@ input:-moz-placeholder {
     		transition: all 300ms ease-out;
 }
 	.top-menu.shown{
+		visibility: visible;
 		-webkit-transform: translateY(-30px);
 		   -moz-transform: translateY(-30px);
 		    -ms-transform: translateY(-30px);
