--- a/css/jquery.fancybox.css
+++ b/css/jquery.fancybox.css
@@ -30,8 +30,10 @@
 	color: #444;
 	text-shadow: none;
 	-webkit-border-radius: 4px;
-	   -moz-border-radius: 4px;
-	        border-radius: 4px;
+	-moz-border-radius: 4px;
+	border-radius: 4px;
+	margin-bottom: 40px;
+	margin-top: 40px;
 }
 
 .fancybox-opened {
@@ -39,9 +41,11 @@
 }
 
 .fancybox-opened .fancybox-skin {
+	/* margin-bottom: 50px; */
+	/* margin-top: 50px; */
 	-webkit-box-shadow: 0 10px 25px rgba(0, 0, 0, 0.5);
-	   -moz-box-shadow: 0 10px 25px rgba(0, 0, 0, 0.5);
-	        box-shadow: 0 10px 25px rgba(0, 0, 0, 0.5);
+	-moz-box-shadow: 0 10px 25px rgba(0, 0, 0, 0.5);
+	box-shadow: 0 10px 55px rgba(0, 0, 0, 0.5);
 }
 
 .fancybox-outer, .fancybox-inner {
@@ -184,7 +188,7 @@
 	overflow: hidden;
 	display: none;
 	z-index: 8010;
-	background: url('fancybox_overlay.png');
+	background-color: rgba(0,0,0,0.9);
 }
 
 .fancybox-overlay-fixed {
